21.12.12 Actions log scrollbar fix
https://github.com/refined-github/refined-github/issues/5152

--- a/style/21.12.12.css
+++ b/style/21.12.12.css
@@ -36,3 +36,8 @@ md-ref + button {
 	border: 0;
 	box-shadow: none;
 }
+
+/* https://github.com/refined-github/refined-github/issues/5152 */
+ :root .CheckStep-line .CheckStep-line-content {
+   overflow: visible;
+ }
